// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders correctly 1`] = `
<DocumentFragment>
  <div
    class="checkbox--container"
    data-testid="checkbox-component"
  >
    <div
      class="checkbox--icon-container"
    >
      <svg
        class="checkbox--icon invisible"
        fill="currentColor"
        height="0.625rem"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 512 512"
        width="0.625rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
        />
      </svg>
    </div>
    <span
      class="typo--s typo--text-secondary checkbox--label"
    >
      sample
    </span>
    <input
      class="hidden"
      type="checkbox"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly when checked 1`] = `
<DocumentFragment>
  <div
    class="checkbox--container"
    data-testid="checkbox-component"
  >
    <div
      class="checkbox--icon-container"
    >
      <svg
        class="checkbox--icon"
        fill="currentColor"
        height="0.625rem"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 512 512"
        width="0.625rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
        />
      </svg>
    </div>
    <span
      class="typo--s typo--text-secondary checkbox--label"
    >
      sample
    </span>
    <input
      class="hidden"
      type="checkbox"
      value=""
    />
  </div>
</DocumentFragment>
`;
